# wedding-cards

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: docker-ci-cd.yml
cards/: admin.py  allauth.py  api.py  api_views.py  backends.py  forms.py  models.py  serierizers.py  signals.py  urls.py  views.py
cards/migrations/: 0001_initial.py  0002_alter_weddingevent_options_and_more.py  0002_weddingevent_status.py  0003_guest_card_image.py  0003_guest_guest_name_alter_guest_email_and_more.py  0004_guest_payment_amount_eventschedule.py  0004_weddingevent_couple.py  0005_guest_qr_code.py  0006_remove_invitation_card_image_and_more.py  0007_alter_weddingevent_options_and_more.py  0008_alter_guest_unique_together.py  0009_alter_qrverification_id.py
docker/nginx/: nginx.txt
docker/postgres/: init.sql
templates/: event_detail.html  profile.html
templates/account/: base.html  form_styles.html  login.html  signup.html
templates/allauth/layouts/: base.html
templates/invitations/: invitation_card.html  verification_failed.html  verification_success.html
templates/partials/: event_form.html  event_list.html  guest_form.html  invitation_list.html
utils/: generators.py  middlewares.py
wedding_res/: api_router.py  asgi.py  celery.py  settings.py  storage_backends.py  urls.py  wsgi.py
